--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,13 +37,12 @@ jobs:
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             glados
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
 
       - name: Get Release URL
         run: |
