--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and package glados executable
         run: |
           make
-          make test_run
+          make unittest_run
 
       - name: Create Release
         id: create_release
